[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "il_utils"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "opencv-python",
    "tqdm",
    "lerobot",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["il_utils*"]
